<resources>
    <string name="app_name">CoWin 2.0</string>
    <string name="enter_pincode">Enter pincode</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_by_pincode">Search By Pincode</string>
    <string name="download_certificate">Download Certificate</string>
    <string name="enter_date">Enter Date</string>
    <string name="_2nd_dose">2nd Dose</string>
    <string name="_1st_dose">1st Dose</string>
    <string name="timedemo">09:10</string>
    <string name="time">Time: </string>
    <string name="name">Name</string>
    <string name="_999">999</string>
    <string name="cost">Cost: </string>
    <string name="free">Free</string>
    <string name="age">Age: </string>
    <string name="vaccine">Vaccine: </string>
    <string name="select_state">Select State</string>
    <string name="select_districts">Select Districts</string>
    <string name="search_by_states">Search By States</string>
    <string name="no_slots_available_please_try_later">No slots available, Please try later.</string>
    <string name="something_wrong">Something wrong, Please try later.</string>
    <string name="date">Date:</string>
    <string name="_03_03_2021">03/03/2021</string>
    <string name="change">Change</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="set_alert">Set Alert</string>
</resources>