<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment"
    android:layout_margin="@dimen/_9sdp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_vaccine_pana"/>

    <Button
        android:id="@+id/btnFindByPin"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_11sdp"
        android:layout_weight="2"
        android:background="@drawable/btn_rounded"
        android:backgroundTint="@color/yellow_btn"
        android:fontFamily="@font/ubuntu"
        android:text="@string/search_by_pincode"
        android:textAllCaps="false"
        android:textColor="@color/biscay"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnFindByStates"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_below="@+id/btnFindByPin"
        android:layout_marginTop="@dimen/_11sdp"
        android:layout_weight="2"
        android:background="@drawable/btn_rounded"
        android:backgroundTint="@color/yellow_btn"
        android:fontFamily="@font/ubuntu"
        android:text="@string/search_by_states"
        android:textAllCaps="false"
        android:textColor="@color/biscay"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDownloadCertificate"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_below="@+id/btnFindByStates"
        android:layout_marginTop="@dimen/_11sdp"
        android:layout_weight="2"
        android:background="@drawable/btn_rounded"
        android:backgroundTint="@color/yellow_btn"
        android:fontFamily="@font/ubuntu"
        android:text="@string/download_certificate"
        android:textAllCaps="false"
        android:textColor="@color/biscay"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

</RelativeLayout>