<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_3sdp"
    android:layout_marginEnd="@dimen/_3sdp"
    android:layout_marginTop="@dimen/_3sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="@dimen/_11sdp"
        android:elevation="@dimen/_5sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvFirstDose"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                app:cardBackgroundColor="@color/yellow_btn"
                app:cardCornerRadius="@dimen/_23sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/biscay"
                app:strokeWidth="@dimen/_1sdp"
                android:layout_centerVertical="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFirstDose"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:text="@string/_999"
                        android:textColor="@color/biscay"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:maxLines="1"
                        android:text="@string/_1st_dose"
                        android:textColor="@color/biscay"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/cvSecondDose"
                android:layout_toEndOf="@+id/cvFirstDose"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/cvFirstDose"
                app:layout_constraintStart_toEndOf="@+id/cvFirstDose"
                app:layout_constraintTop_toTopOf="@id/cvFirstDose"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu"
                    android:maxLines="1"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vaccine"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_9sdp" />

                    <TextView
                        android:id="@+id/tvVaccine"
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/free"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_9sdp" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="@string/age"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_9sdp" />

                    <TextView
                        android:id="@+id/tvAge"
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/free"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_9sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_9sdp" />

                    <TextView
                        android:id="@+id/tvTime"
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timedemo"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_9sdp" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="@string/cost"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_9sdp" />

                    <TextView
                        android:id="@+id/tvCost"
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/free"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_9sdp" />

                </LinearLayout>


            </LinearLayout>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvSecondDose"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                app:cardBackgroundColor="@color/yellow_btn"
                app:cardCornerRadius="@dimen/_23sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/biscay"
                app:strokeWidth="@dimen/_1sdp"
                android:layout_centerVertical="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSecondDose"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:text="@string/_999"
                        android:textColor="@color/biscay"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:maxLines="1"
                        android:text="@string/_2nd_dose"
                        android:textColor="@color/biscay"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>